# library_clean_architecture

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 52b5f418afe2_convert_member_id_to_uuid.py
src/: server.py
src/cmd_app/api/routes/: admin.py  member.py
src/cmd_app/cli/commands/: add_admin.py  add_book.py  login_admins.py  login_members.py
src/entrypoints/api/: server.py
src/entrypoints/api/admin/: response.py  routes.py
src/entrypoints/api/dependencies/: annotated_deps.py
src/entrypoints/api/member/: member_response.py  routes.py
src/entrypoints/api/middleware/: exception_handlers.py
src/entrypoints/api/routes/: admin.py  member.py
src/entrypoints/api/utils/: response_utils.py
src/entrypoints/cli/: main.py
src/entrypoints/cli/commands/: add_admin.py  add_book.py  add_members.py  create_tables.py  db_utils.py  list_books.py  list_members.py  login_admins.py  login_members.py  main.py  member.py
src/library_clean_architecture/: __init__.py
src/modules/application/interfaces/: admin_services.py  member_services.py
src/modules/application/services/: admin_services.py  member_services.py
src/modules/domain/admin/: models.py  response.py  routes.py
src/modules/domain/exceptions/: base.py
src/modules/domain/factories/: member_factory.py
src/modules/domain/member/: models.py  response.py  routes.py
src/modules/domain/services/: admin_services.py  member_services.py
src/modules/domain/use_cases/: add_books.py  add_member.py  create_admin.py  view_books.py  (+3 more)
src/modules/infrastructure/: logger.py
(+55 files in other folders)
