[project]
name = "library-clean-architecture"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "shreeya34", email = "1shreeya2@gmail.com" }
]
dependencies = [
    "pydantic>=2.11.4",
    "sqlalchemy>=2.0.40",
    "uvicorn[standard]>=0.34.2",
    "psycopg2-binary>=2.9.10",
    "fastapi[standard]>=0.115.12",
    "argon2>=0.1.10",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.10.1",
    "argon2-cffi>=23.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/library_clean_architecture"]

[tool.rye.scripts]
main = "fastapi dev server.py"
